bugfix: vertical centering on mobile

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -415,7 +415,9 @@ hr {
   text-align: center;
   position: relative;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+     -moz-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 .logo {
   width: 150px;
